--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Danilo Morais</title>
 </head>
 <body>
-    <h1>Teste</h1>
-    <h2>Teste para perfil pessoal</h2>
+    <h1>Bem Vindo!</h1>
+    <h2>"Meu nome é Danilo, sou estudante de Computação na UFRA, buscando oportunidade para desenvolver soluções inovadoras em software e análise de dados, aplicando meus conhecimentos em projetos desafiadores. <br> Desenvolvendo habilidades em Python, Java, HTML5, CSS3 e SQL"</h2>
+    <a href="http://github.com/Morais453"></a>
+    <a href="https://www.instagram.com/danilo.morais_/"></a>
 </body>
 </html>
