--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Bem Vindo!</h1>
     <h2>"Meu nome é Danilo, sou estudante de Computação na UFRA, buscando oportunidade para desenvolver soluções inovadoras em software e análise de dados, aplicando meus conhecimentos em projetos desafiadores. <br> Desenvolvendo habilidades em Python, Java, HTML5, CSS3 e SQL"</h2>
-    <a href="http://github.com/Morais453"></a>
-    <a href="https://www.instagram.com/danilo.morais_/"></a>
+    <a href="http://github.com/Morais453">github</a>
+    <a href="https://www.instagram.com/danilo.morais_/">instagram</a>
 </body>
 </html>
