--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Danilo Morais</title>
 </head>
 <body>
+    <a href="http://github.com/Morais453" target="_blank"><img src="https://img.shields.io/badge/gitHub-000?style=for-the-badge&logo=github" alt=""></a>
+    <a href="https://www.instagram.com/danilo.morais_/" target="_blank"><img src="https://img.shields.io/badge/Instagram-000?style=for-the-badge&logo=instagram" alt=""></a>
     <h1>Bem Vindo!</h1>
-    <h2>"Meu nome é Danilo, sou estudante de Computação na UFRA, buscando oportunidade para desenvolver soluções inovadoras em software e análise de dados, aplicando meus conhecimentos em projetos desafiadores. <br> Desenvolvendo habilidades em Python, Java, HTML5, CSS3 e SQL"</h2>
-    <a href="http://github.com/Morais453" target="_blank">github</a><br>
-    <a href="https://www.instagram.com/danilo.morais_/" target="_blank">instagram</a>
+    <h3>"Meu nome é Danilo, sou estudante de Computação na UFRA, buscando oportunidade para desenvolver soluções inovadoras em software e análise de dados, aplicando meus conhecimentos em projetos desafiadores. <br> Desenvolvendo habilidades em Python, Java, HTML5, CSS3 e SQL"</h3>
+    
+    <h2>Projetos</h2>
+    <a href="https://github.com/Morais453/Controle_de_estoque_simples.git" target="_blank">Introdução a interface PyQT5 e SQL</a>
+    <br>
+    <a href="https://github.com/Morais453/Estudo_Algoritmo.git" target="_blank">Estudos de Algoritmo</a>
 </body>
 </html>
