--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Danilo Morais</title>
 </head>
 
 <body>
     <div class="container">
-        <img src="src/assets/imgtop.png" alt="" class="img-top-left">
+        <img src="assets/images/imgtop.png" alt="" class="img-top-left">
 
         <p class="icon">
 
@@ -32,7 +32,7 @@
         <br>
         <a href="https://github.com/Morais453/Estudo_Algoritmo.git" target="_blank">Estudos de Algoritmo</a>
         </div>
-        <img src="src/assets/imgbot.png" alt="" class="img-bottom-right">
+        <img src="assets/images/imgbot.png" alt="" class="img-bottom-right">
     </div>
 </body>
 
